    * RTM plugin now sycs tags

2009-12-11 Getting Things GNOME! 0.2.1
    * Schedule for context menu by Bryce Harrington
    * Improved export feature by Bryce Harrington and Luca Invernizzi
    * Restore closed tasks filtering by selected tag, fixes bug #498857
    * Temporary fix allowing to reset tag color by Matthew Rasmus
    * Added the ability to add a tag from the right click menu in the task browser, by Matthew Rasmus.
    * Better explanation of the "Work view" concept in documentation
    * Multiple selection
    * API clarifications
    * Cut & Paste improvements
    * Notification area plugin improvements
    * Icons reflect action availability
    * Misc. editor bug fixes
    * Misc. tag list bug fixes

2009-12-11 Getting Things GNOME! 0.2
    * Bugs fixes from 0.1.9

2009-12-02 Getting Things GNOME! 0.1.9
    * Support non-exact ("fuzzy") due dates: 'now', 'soon', and 'later' by Kevin Mehall
    * Fixes a bug with gtk stock strings being marked as translatable, by Henning Eggers (#490231)
    * When a task is deleted, all subtask are deleted as well by Mikkel Kjær Jensen
    * Groups for tags and subtags by Kevin Mehall
    * GNOME bugzilla plugin by Guillaume Desmottes
    * Handle tasks spatially (remember position & size)
    * Opened tasks on quit are reopened on start
    * Remove the "File" menu. We have no files, we have tasks!    
    * Patch from mrk to improve compatibility with non GNU systems
    * Close date selector widget on single click
    * The toolbar can now be hidden by Mikkel Kjær Jensen
    * Empty new tasks are deleted when editor is closed
    * lot of bug fixed in the editor while playing with subtasks
    * Works well with the "text besides icon" GNOME option
    * Merge RTM plugin branch from Luca Invernizzi
    * i18n: fixed window title in GTG/taskbrowser/browser.py, by Dario Bertini 
    * Patch from Luca Invernizzi to add XDG_CACHE redefinition in script/debug.sh